[tool.poetry]
name = "ozi"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.4.2"
Faker = "^4.1.2"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[coverage:report]
fail_under = "90"
show_missing = "True"
skip_covered = "True"

[coverage:run]
omit = "manage.py"
